--- a/Alumax.html
+++ b/Alumax.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" href="css/alumax.css">
+<link rel="stylesheet" href="css/Alumax.css">
 <link rel="stylesheet" href="css/Responsive.css">
 <script src="https://kit.fontawesome.com/4fc8c14b7e.js" crossorigin="anonymous"></script>
 </head>
@@ -9,7 +9,7 @@
 <div class="container">
 	<div class="header-top">
 		<ul>
-			<li>GALUMAX<sup>Ⓡ</sup></li>
+			<li>GULUMAX<sup>Ⓡ</sup></li>
 			<li>PRODUCT</li>
 			<li>SERVICES</li>
 			<li>CONTACT</li>
