--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<link rel="stylesheet" href="css/Alumax.css">
-<link rel="stylesheet" href="css/Responsive.css">
+<link rel="stylesheet" href="./css/Alumax.css">
+<link rel="stylesheet" href="./css/Responsive.css">
 <script src="https://kit.fontawesome.com/4fc8c14b7e.js" crossorigin="anonymous"></script>
 </head>
 <body>
